--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,7 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.3.8.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
+    id 'application'
 }
 
 group 'com.testing.springcloud:common'
@@ -22,9 +20,9 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 
     //springboot
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.3.8.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.3.8.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-validation:2.3.8.RELEASE'
+    compileOnly 'org.springframework.boot:spring-boot-starter-web:2.3.8.RELEASE'
+    compileOnly 'org.springframework.boot:spring-boot-starter-data-jpa:2.3.8.RELEASE'
+    compileOnly 'org.springframework.boot:spring-boot-starter-validation:2.3.8.RELEASE'
 }
 
 test {
