--- a/persona/Dockerfile
+++ b/persona/Dockerfile
@@ -2,9 +2,10 @@ ARG BUILD_IMAGE=gradle:jdk11
 ARG RUNTIME_IMAGE=openjdk:11-jdk-slim
 
 FROM ${BUILD_IMAGE} as dependencies
-ENV APP_HOME=/
-WORKDIR $APP_HOME
+ENV APP_HOME=/persona
 
+#persona
+WORKDIR $APP_HOME
 COPY build.gradle settings.gradle $APP_HOME
 ADD src $APP_HOME/src
 RUN gradle build
@@ -13,5 +14,5 @@ FROM ${RUNTIME_IMAGE}
 EXPOSE 9010
 
 ENV ARTIFACT_NAME=*.jar
-COPY --from=dependencies /build/libs/$ARTIFACT_NAME /app/test.jar
+COPY --from=dependencies $APP_HOME/build/libs/$ARTIFACT_NAME /app/test.jar
 CMD ["java", "-jar", "/app/test.jar"]
