--- a/persona/build.gradle
+++ b/persona/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.16'
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
 
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
     //swagger
     implementation "io.springfox:springfox-boot-starter:3.0.0"
     compile "io.springfox:springfox-swagger-ui:3.0.0"
@@ -35,8 +38,18 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.8.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-config:2.2.8.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.8.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-hystrix:1.4.7.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-hystrix-dashboard:1.4.7.RELEASE'
 
+
+    //spring-admin
+    implementation 'de.codecentric:spring-boot-admin-starter-client:2.3.1'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.3.8.RELEASE'
     implementation project(':common')
+
+    //database
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.3.8.RELEASE'
+    runtime 'com.h2database:h2:1.4.193'
 }
 
 mainClassName = project.ext.nombreClase
