--- a/zuul/build.gradle
+++ b/zuul/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.8.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-config:2.2.8.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.8.RELEASE'
+
+    //spring-admin
+    implementation 'de.codecentric:spring-boot-admin-starter-client:2.3.1'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.3.1.RELEASE'
 }
 
 mainClassName = project.ext.nombreClase
