--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,18 @@ include ':config'
 include ':zipkin'
 include ':common'
 include 'admin'
+include 'archivo'
+include 'archivo'
+include 'archivo:archivo-api'
+findProject(':archivo:archivo-api')?.name = 'archivo-api'
+include 'archivo:archivo-core'
+findProject(':archivo:archivo-core')?.name = 'archivo-core'
+include 'archivo:archivo-client'
+findProject(':archivo:archivo-client')?.name = 'archivo-client'
+include 'persona:persona-api'
+findProject(':persona:persona-api')?.name = 'persona-api'
+include 'persona:persona-core'
+findProject(':persona:persona-core')?.name = 'persona-core'
+include 'persona:persona-client'
+findProject(':persona:persona-client')?.name = 'persona-client'
 
